--- a/midland-bs-mannager/src/main/webapp/assets/css/common.css
+++ b/midland-bs-mannager/src/main/webapp/assets/css/common.css
@@ -287,6 +287,21 @@ section.content p.detail-title .setup:hover {
 	background-color:#727a8d;
 	color: #fff;
 }
+section.content p.detail-title .left {
+	float: left;
+	width: 110px;
+	height: 38px;
+	line-height: 38px;
+	text-align: center;
+	background-color: #a0a9ba;
+	color: #fff;
+	font-size: 14px;
+	border-radius: 5px;
+}
+section.content p.detail-title .left:hover {
+	background-color:#727a8d;
+	color: #fff;
+}
 .content ul.userinfo>li {
 	float: left;
 	margin-left: 20px;
