--- a/midland-bs-mannager/src/main/webapp/assets/css/common.css
+++ b/midland-bs-mannager/src/main/webapp/assets/css/common.css
@@ -304,7 +304,7 @@ section.content p.detail-title .left:hover {
 }
 .content ul.userinfo>li {
 	float: left;
-	margin-left: 20px;
+	padding-left: 20px;
 	padding-top: 10px;
 	/* display: flex; */
 }
