--- a/midland-bs-mannager/src/main/webapp/assets/css/common.css
+++ b/midland-bs-mannager/src/main/webapp/assets/css/common.css
@@ -689,6 +689,25 @@ input.date {
 	margin-bottom: 0;
 }
 
+/*配套*/
+.peitao {
+	height: 30px;
+	line-height: 30px;
+}
+.peitao input[type=checkbox] {
+	float: none !important;
+	width: auto !important;
+	height: auto !important;
+	margin: 0 3px 0 0;
+	vertical-align: middle;
+}
+.peitao > span {
+	padding-right: 15px;
+}
+.peitao > span em {
+	vertical-align: middle;
+}
+
 /******* 二级页面样式 *******/
 
 
