--- a/midland-bs-mannager/src/main/webapp/assets/css/common.css
+++ b/midland-bs-mannager/src/main/webapp/assets/css/common.css
@@ -364,6 +364,7 @@ input.date {
 	width: 80px;
 	height: 28px;
 	line-height: 28px;
+	vertical-align: middle;
 	text-align: center;
 	border: none;
 	border-radius: 4px;
