--- a/midland-bs-mannager/src/main/webapp/assets/css/common.css
+++ b/midland-bs-mannager/src/main/webapp/assets/css/common.css
@@ -1034,6 +1034,6 @@ body .layer-style .layui-layer-btn .layui-layer-btn1:hover{
 	margin-left:5px!important;
 	height:28px!important;
 	line-height:28px!important;
-	padding-top:4px!important;
+	/*padding-top:4px!important;*/
 	float:none!important;
 }
