--- a/midland-bs-mannager/src/main/webapp/assets/css/common.css
+++ b/midland-bs-mannager/src/main/webapp/assets/css/common.css
@@ -677,7 +677,7 @@ input.date {
 	width: auto;
 	min-width: 80px;
 }
-.content ul.updInfo li:not(:last-child) input{
+.content ul.updInfo li:not(:last-child) input[type=text]{
 	float: none;
 	width: 250px;
 }
