--- a/midland-bs-mannager/src/main/webapp/assets/css/common.css
+++ b/midland-bs-mannager/src/main/webapp/assets/css/common.css
@@ -441,10 +441,11 @@ input.date {
 
 
 
+
 .width-lg .selected{
 	width: 278px !important;
 }
-.width-lg li>span:not(._star){
+.width-lg > li>span:not(._star){
 	width: 100px !important;
 }
 .width-md input[type=text],
@@ -453,6 +454,47 @@ input.date {
 }
 .width-md .selected{
 	width: 248px !important;
+}
+.textarea-lg{
+	width: 90%;
+	min-height: 350px;
+	resize:none;
+	outline-color: #0099e0;
+	float: left
+}
+.textarea-md{
+	width: 90%;
+	min-height: 150px;
+	resize:none;
+	float: left;
+	border: 1px solid #dbe2e6;
+	border-radius: 4px;
+	outline: none;
+	text-indent: 10px;
+}
+.tree-select{
+	position: relative;
+	display: inline-block;
+	z-index: 999;
+}
+.content ul.adminfo li .tree-select input[type=text]{
+	float: none;
+}
+.tree-select .zTreeDemoBackground{
+	position: absolute;
+	left: 0;
+}
+.tree-select .ztree{
+	width:100%;
+	height: 140px!important;
+	margin-top: 0;
+}
+.tree-select .ztree-close{
+	position: absolute;
+	right: 0;
+}
+.warn{
+	font-size:12px; color:#afadad;
 }
 
 
@@ -752,7 +794,7 @@ input.date {
 .content > ul.adminfo>li:last-child {
 	/* padding-top: 40px; */
 }
-.content ul.adminfo li>span {
+.content ul.adminfo > li > span {
 	float:left;
 	display: inline-block;
 	width: 70px;
