--- a/midland-bs-mannager/src/main/webapp/assets/css/common.css
+++ b/midland-bs-mannager/src/main/webapp/assets/css/common.css
@@ -104,7 +104,36 @@ p.forget a {color: #666;}
 
 /********** 后台界面样式 **********/
 
+/***********upload*******************/
+.fileupload .fileupload-item {
+	display: inline-block;
+	position: relative;
+	width: 110px;
+	height: 64px;
+	margin: 10px 10px 0 0;
+	overflow: hidden;
+	border: 1px solid #ccc;
+}
 
+.fileupload-item img {
+	max-width: 100%;
+	max-height: 100%;
+}
+
+.fileupload-item .xclose {
+	display: block;
+	position: absolute;
+	right: 0;
+	top: 0;
+	width: 16px;
+	height: 16px;
+	line-height: 16px;
+	text-align: center;
+	background: rgba(0, 0, 0, .7);
+	font-size: 14px;
+	color: #ddd;
+	cursor: pointer;
+}
 
 /******* head样式 *******/
 
@@ -448,8 +477,7 @@ input.date {
 .width-lg > li>span:not(._star){
 	width: 100px !important;
 }
-.width-md input[type=text],
-.width-md textarea{
+.width-md input[type=text]{
 	width: 250px !important;
 }
 .width-md .selected{
