set encoding to utf-8

--- a/midland-bs-mannager/src/main/webapp/assets/css/common.css
+++ b/midland-bs-mannager/src/main/webapp/assets/css/common.css
@@ -355,6 +355,13 @@ section.content p.detail-title .left:hover {
 	margin-right: 10px;
 	outline: none;
 }
+.content ul.adminfo li .checkitem{
+	display: inline-block;
+	height: 28px;
+	line-height: 28px;
+	margin-right: 10px;
+	outline: none;
+}
 .content ul.userinfo li>em.gang {
 	display:inline-block;
 	height:28px;
